# ResultsBook2DB

./: .gitignore  BUILD_GUIDE.md  LICENSE  README.md  create_db.py  detection.py  logger_config.py  main.py  main.spec  main_production.spec  main_testing.spec  pdf_convert.py  pdf_tools.py  pyproject.toml  requirements.txt  setup.iss  tools.py  utils.py  worker.py  yolo_tools.py
.github/workflows/: ci.yml
tests/: test_imports.py
